--- a/MasterManager-war/web/index.html
+++ b/MasterManager-war/web/index.html
@@ -1,16 +1,61 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:em="http://xmlns.jcp.org/jsf/composite/emcomp">
+    <ui:composition template="./templates/skeleton.xhtml">
+        <ui:define name="title">CCP</ui:define>
+        <ui:define name="main">
+
+            <em:dt 
+                   title="Students" 
+                   headers="#{['Username', 'Name', 'Email', 'Course']}"
+                   props="#{['username', 'name', 'email', 'courseName']}"
+                   list="#{administratorManager.allStudentsREST}">
+                <p:column headerText="Actions">
+                    <h:form>
+                        <h:commandLink value="Details" action="admin_students_details?facesredirect=true">
+                            <f:setPropertyActionListener
+                                target="#{administratorManager.currentStudent}" value="#{object}" />
+                        </h:commandLink>
+                        &nbsp;
+                        <h:commandLink value="Update" action="admin_students_update?facesredirect=true">
+                            <f:setPropertyActionListener
+                                target="#{administratorManager.currentStudent}" value="#{object}" />
+                        </h:commandLink>
+                        &nbsp;
+                        <h:commandLink value="Remove"
+                                       actionListener="#{administratorManager.removeStudent}">
+                            <f:param name="studentUsername" id="studentUsername"
+                                     value="#{object.username}" />
+                        </h:commandLink>
+                    </h:form>
+                </p:column>
+            </em:dt>
+
+            <br/>
+            <br/>
+
+            <h:link value="New subject" outcome="admin_subjects_create"/>
+
+            <br/>
+            <br/>
+
+            <h:form enctype="multipart/form-data">
+                <p:growl id="messages" showDetail="true" />
+                <p:fileUpload value="#{uploadManager.file}" mode="simple" skinSimple="true"/>
+                <p:commandButton value="Submit" ajax="false" actionListener="#{uploadManager.upload}"/>
+            </h:form>
+            <h:messages errorClass="error" />
+
+            <h:form>
+                <p:commandButton value="Download" ajax="false" icon="ui-icon-arrowthick-1-s">
+                    <p:fileDownload value="#{downloadManager.file}" />
+                </p:commandButton>
+            </h:form>
+        </ui:define>
+    </ui:composition>
 </html>
