--- a/MasterManager-war/web/index.xhtml
+++ b/MasterManager-war/web/index.xhtml
@@ -14,7 +14,7 @@
                    title="Students" 
                    headers="#{['Username', 'Name', 'Email', 'Course']}"
                    props="#{['username', 'name', 'email', 'courseName']}"
-                   list="#{administratorManager.allStudentsREST}">
+                   list="#{administratorManager.allStudents}">
                 <p:column headerText="Actions">
                     <h:form>
                         <h:commandLink value="Details" action="admin_students_details?facesredirect=true">
