Added new Project proposel and allproposals rest api .

--- a/MasterManager-war/web/index.xhtml
+++ b/MasterManager-war/web/index.xhtml
@@ -35,6 +35,13 @@
                     </h:form>
                 </p:column>
             </em:dt>
+            
+            <em:dt 
+                   title="Project Proposals" 
+                   headers="#{['projectType', 'title', 'preponent']}"
+                   props="#{['projectType', 'title', 'preponent']}"
+                   list="#{administratorManager.allProjectProposals}">
+            </em:dt>
 
             <br/>
             <br/>
