--- a/MasterManager-war/web/index.xhtml
+++ b/MasterManager-war/web/index.xhtml
@@ -35,6 +35,37 @@
                     </h:form>
                 </p:column>
             </em:dt>
+            
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            
+            <em:dt 
+                   title="Teachers" 
+                   headers="#{['Username', 'Name', 'Email']}"
+                   props="#{['username', 'name', 'email']}"
+                   list="#{administratorManager.allTeachers}">
+                <p:column headerText="Actions">
+                    <h:form>
+                        <h:commandLink value="Details" action="admin_teachers_details?facesredirect=true">
+                            <f:setPropertyActionListener
+                                target="#{administratorManager.currentTeacher}" value="#{object}" />
+                        </h:commandLink>
+                        &nbsp;
+                        <h:commandLink value="Update" action="admin_students_update?facesredirect=true">
+                            <f:setPropertyActionListener
+                                target="#{administratorManager.currentTeacher}" value="#{object}" />
+                        </h:commandLink>
+                        &nbsp;
+                        <h:commandLink value="Remove"
+                                       actionListener="#{administratorManager.removeTeacher}">
+                            <f:param name="studentUsername" id="teacherUsername"
+                                     value="#{object.username}" />
+                        </h:commandLink>
+                    </h:form>
+                </p:column>
+            </em:dt>
 
             <br/>
             <br/>
