Change Preponent to Proponent.

--- a/MasterManager-war/web/index.xhtml
+++ b/MasterManager-war/web/index.xhtml
@@ -69,8 +69,8 @@
             
             <em:dt 
                 title="Project Proposals" 
-                headers="#{['projectType', 'title', 'preponent']}"
-                props="#{['projectType', 'title', 'preponent']}"
+                headers="#{['ProjectType', 'Title', 'Proponent']}"
+                props="#{['projectType', 'title', 'proponent']}"
                 list="#{administratorManager.allProjectProposals}">
                 <p:column headerText="Actions">
                     <h:form>
