--- a/MasterManager-war/web/admin_project_proposals_details.xhtml
+++ b/MasterManager-war/web/admin_project_proposals_details.xhtml
@@ -57,17 +57,17 @@
                     title="Preponent" 
                     headers="#{['Username', 'Name', 'Email']}"
                     props="#{['username', 'name', 'email']}"
-                    list="#{administratorManager.currentProjectProposal.preponent}">
+                    list="#{administratorManager.currentProjectProposal.proponent}">
                     <p:column headerText="Actions">
                         <h:form>
                             <h:commandLink value="Details" action="admin_students_details?facesredirect=true">
                                 <f:setPropertyActionListener
-                                    target="#{administratorManager.currentPreponent}" value="#{object}" />
+                                    target="#{administratorManager.currentProponent}" value="#{object}" />
                             </h:commandLink>
                             &nbsp;
                             <h:commandLink value="Update" action="admin_students_update?facesredirect=true">
                                 <f:setPropertyActionListener
-                                    target="#{administratorManager.currentPreponent}" value="#{object}" />
+                                    target="#{administratorManager.currentProponent}" value="#{object}" />
                             </h:commandLink>
                         </h:form>
                     </p:column>
