--- a/MasterManager-war/web/index.xhtml
+++ b/MasterManager-war/web/index.xhtml
@@ -17,7 +17,7 @@
                 list="#{administratorManager.allStudents}">
                 <p:column headerText="Actions">
                     <h:form>
-                        <h:commandLink value="Details" action="admin_students_details?facesredirect=true">
+                        <h:commandLink value="Details" action="admin_student_details?facesredirect=true">
                             <f:setPropertyActionListener
                                 target="#{administratorManager.currentStudent}" value="#{object}" />
                         </h:commandLink>
