--- a/MasterManager-war/web/index.xhtml
+++ b/MasterManager-war/web/index.xhtml
@@ -35,8 +35,8 @@
                     </h:form>
                 </p:column>
             </em:dt>
-                <h:link value="Create Student" outcome="students_create"/>
-                
+            <h:link value="Create Student" outcome="students_create"/>
+
             <br/>
             <br/>
             <br/>
@@ -67,7 +67,8 @@
                     </h:form>
                 </p:column>
             </em:dt>
-
+            <h:link value="Create Teacher" outcome="teacher_create"/>
+            <br/>
             <em:dt 
                 title="Project Proposals" 
                 headers="#{['ProjectType', 'Title', 'Proponent']}"
