--- a/MasterManager-war/web/index.xhtml
+++ b/MasterManager-war/web/index.xhtml
@@ -49,7 +49,7 @@
                 list="#{administratorManager.allTeachers}">
                 <p:column headerText="Actions">
                     <h:form>
-                        <h:commandLink value="Details" action="admin_teachers_details?facesredirect=true">
+                        <h:commandLink value="Details" action="teacher_details?facesredirect=true">
                             <f:setPropertyActionListener
                                 target="#{administratorManager.currentTeacher}" value="#{object}" />
                         </h:commandLink>
