--- a/MasterManager-war/web/index.xhtml
+++ b/MasterManager-war/web/index.xhtml
@@ -54,7 +54,7 @@
                                 target="#{administratorManager.currentTeacher}" value="#{object}" />
                         </h:commandLink>
                         &nbsp;
-                        <h:commandLink value="Update" action="admin_students_update?facesredirect=true">
+                        <h:commandLink value="Update" action="teacher_update?facesredirect=true">
                             <f:setPropertyActionListener
                                 target="#{administratorManager.currentTeacher}" value="#{object}" />
                         </h:commandLink>
