--- a/MasterManager-war/web/index.xhtml
+++ b/MasterManager-war/web/index.xhtml
@@ -100,6 +100,44 @@
             <br/>
             <br/>
 
+            <em:dt 
+                title="Public Tests" 
+                headers="#{['code', 'title', 'testDateTime', 'place', 'link','student',
+                           'juryPresident', 'advisor', 'outsideTeacherName', 
+                           'outsideTeacherEmail']}"
+                props="#{['code', 'title', 'testDateString', 'place', 'link','studentName',
+                         'juryPresidentName', 'advisorName', 'outsideTeacherName', 
+                         'outsideTeacherEmail']}"
+                list="#{administratorManager.allPublicTests}">
+                <p:column headerText="Actions">
+                    <h:form>
+                        <h:commandLink value="Details" action="admin_publictest_details?facesredirect=true">
+                            <f:setPropertyActionListener
+                                target="#{administratorManager.currentPublicTest}" value="#{object}" />
+                        </h:commandLink>
+                        &nbsp;
+                        <h:commandLink value="Update" action="admin_publictest_update?facesredirect=true">
+                            <f:setPropertyActionListener
+                                target="#{administratorManager.currentPublicTest}" value="#{object}" />
+                        </h:commandLink>
+                        &nbsp;
+                        <h:commandLink value="Remove"
+                                       actionListener="#{administratorManager.removePublicTest}">
+                            <f:param name="publicTestCode" id="publicTestCode"
+                                     value="#{object.code}" />
+                        </h:commandLink>
+                    </h:form>
+                </p:column>
+            </em:dt>
+
+            <h:link class="btn btn-primary" value="Criar Prova Pública" outcome="admin_publictest_create"/>
+
+
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+
             <h:form enctype="multipart/form-data">
                 <p:growl id="messages" showDetail="true" />
                 <p:fileUpload value="#{uploadManager.file}" mode="simple" skinSimple="true"/>
