--- a/MasterManager-war/web/index.xhtml
+++ b/MasterManager-war/web/index.xhtml
@@ -163,6 +163,9 @@
                     </h:form>
                 </p:column>
             </em:dt>
+            <h:link value="Create Institution" outcome="institution_create"/>
+            <br/>
+            <br/>
 
             <h:form enctype="multipart/form-data">
                 <p:growl id="messages" showDetail="true" />
