--- a/MasterManager-war/web/index.xhtml
+++ b/MasterManager-war/web/index.xhtml
@@ -61,7 +61,7 @@
                         &nbsp;
                         <h:commandLink value="Remove"
                                        actionListener="#{administratorManager.removeTeacher}">
-                            <f:param name="studentUsername" id="teacherUsername"
+                            <f:param name="teacherUsername" id="teacherUsername"
                                      value="#{object.username}" />
                         </h:commandLink>
                     </h:form>
@@ -157,7 +157,7 @@
                         &nbsp;
                         <h:commandLink value="Remove"
                                        actionListener="#{administratorManager.removeInstitution}">
-                            <f:param name="studentUsername" id="teacherUsername"
+                            <f:param name="institutionUsername" id="institutionUsername"
                                      value="#{object.username}" />
                         </h:commandLink>
                     </h:form>
