--- a/MasterManager-war/web/index.xhtml
+++ b/MasterManager-war/web/index.xhtml
@@ -147,12 +147,12 @@
                     <h:form>
                         <h:commandLink value="Details" action="institution_details?facesredirect=true">
                             <f:setPropertyActionListener
-                                target="#{administratorManager.currentTeacher}" value="#{object}" />
+                                target="#{administratorManager.currentInstitution}" value="#{object}" />
                         </h:commandLink>
                         &nbsp;
                         <h:commandLink value="Update" action="institution_update?facesredirect=true">
                             <f:setPropertyActionListener
-                                target="#{administratorManager.currentTeacher}" value="#{object}" />
+                                target="#{administratorManager.currentInstitution}" value="#{object}" />
                         </h:commandLink>
                         &nbsp;
                         <h:commandLink value="Remove"
