Search public tests

--- a/MasterManager-war/web/admin_publictest_create.xhtml
+++ b/MasterManager-war/web/admin_publictest_create.xhtml
@@ -73,7 +73,7 @@
                     id="juryPresident"
                     value="#{administratorManager.newPublicTest.juryPresidentUsername}" >
                     <f:selectItems
-                        value="#{administratorManager.allTeachersOrder}"
+                        value="#{administratorManager.allTeachersCCPOnTop}"
                         var="teacher"
                         itemValue="#{teacher.username}"
                         itemLabel="#{teacher.name}" />
