--- a/MasterManager-war/web/admin_publictest_update.xhtml
+++ b/MasterManager-war/web/admin_publictest_update.xhtml
@@ -74,7 +74,7 @@
                     id="juryPresident"
                     value="#{administratorManager.currentPublicTest.juryPresidentUsername}">
                     <f:selectItems
-                        value="#{administratorManager.allTeachersOrder}"
+                        value="#{administratorManager.allTeachersCCPOnTop}"
                         var="teacher"
                         itemValue="#{teacher.username}"
                         itemLabel="#{teacher.name}" />
