Completed Add ScientificAreas of Project Proposal.

--- a/MasterManager-war/web/admin_publictest_create.xhtml
+++ b/MasterManager-war/web/admin_publictest_create.xhtml
@@ -98,7 +98,7 @@
                     id="outsideTeacherName"
                     size="50"
                     required="true"
-                    requiredMessage="Erro: Professore de fora não pode estar vazio."
+                    requiredMessage="Erro: Professor de fora não pode estar vazio."
                     value="#{administratorManager.newPublicTest.outsideTeacherName}"/>
                 <h:message for="outsideTeacherName" errorStyle="color: red" />
 
