--- a/MasterManager-war/web/index.xhtml
+++ b/MasterManager-war/web/index.xhtml
@@ -72,7 +72,7 @@
             <em:dt 
                 title="Project Proposals" 
                 headers="#{['ProjectType', 'Title', 'Proponent']}"
-                props="#{['projectType', 'title', 'proponent']}"
+                props="#{['projectTypeString', 'title', 'proponentUsername']}"
                 list="#{administratorManager.allProjectProposals}">
                 <p:column headerText="Actions">
                     <h:form>
