--- a/MasterManager-war/web/index.xhtml
+++ b/MasterManager-war/web/index.xhtml
@@ -165,12 +165,10 @@
 
             <em:dt 
                 title="Provas Públicas" 
-                headers="#{['Código', 'Titulo', 'Dia da Prova', 'Local', 'Link','Estudante',
-                           'Presidente do Jury', 'Orientador', 'Professore de Fora', 
-                           'Email do Professore de Fora']}"
-                props="#{['code', 'title', 'testDateString', 'place', 'link','studentName',
-                         'juryPresidentName', 'advisorName', 'outsideTeacherName', 
-                         'outsideTeacherEmail']}"
+                headers="#{['Código', 'Titulo', 'Dia da Prova', 'Local', 'Estudante',
+                           'Presidente do Jury', 'Orientador', 'Professore de Fora']}"
+                props="#{['code', 'title', 'testDateString', 'place', 'studentName',
+                         'juryPresidentName', 'advisorName', 'outsideTeacherName']}"
                 list="#{administratorManager.allPublicTests}">
                 <p:column headerText="Acções">
                     <h:form enctype="multipart/form-data">
@@ -187,6 +185,13 @@
                         <h:commandLink value="Remover"
                                        actionListener="#{administratorManager.removePublicTest}">
                             <f:param name="publicTestCode" id="publicTestCode"
+                                     value="#{object.code}" />
+                        </h:commandLink>
+                        &nbsp;
+                        <h:commandLink value="Remover Ata" 
+                                       rendered="${not empty object.documentName}"
+                                       actionListener="#{administratorManager.removePublicTest}">
+                            <f:param name="publicTestCode3" id="publicTestCode3"
                                      value="#{object.code}" />
                         </h:commandLink>
                         &nbsp;
