--- a/MasterManager-war/web/admin/admin_project_proposals_create.xhtml
+++ b/MasterManager-war/web/admin/admin_project_proposals_create.xhtml
@@ -26,7 +26,7 @@
                         id="projectType"
                         value="#{administratorManager.newProjectProposal.projectTypeString}" >
                         <f:selectItems
-                            value="#{administratorManager.projectTypes}"
+                            value="#{administratorManager.allProjectTypes}"
                             var="ccp"/>
                     </h:selectOneMenu>
                     <h:message for="projectType" errorStyle="color: red" />
