--- a/MasterManager-war/web/admin/project_proposals_update.xhtml
+++ b/MasterManager-war/web/admin/project_proposals_update.xhtml
@@ -19,7 +19,7 @@
                  <h:outputLabel for="projectType" value="Tipo de projecto: " />
                 <h:selectOneMenu
                     id="projectType"
-                    value="#{administratorManager.currentProjectProposal.projectType}" >
+                    value="#{administratorManager.currentProjectProposal.projectTypeString}" >
                     <f:selectItems
                         value="#{administratorManager.allProjectTypes}"
                         var="projectType"
