--- a/MasterManager-war/web/admin/admin_project_proposals_details.xhtml
+++ b/MasterManager-war/web/admin/admin_project_proposals_details.xhtml
@@ -8,7 +8,7 @@
       xmlns:em="http://xmlns.jcp.org/jsf/composite/emcomp">
     <h:body>
 
-        <ui:composition template="./templates/skeleton.xhtml">
+        <ui:composition template="../templates/skeleton.xhtml">
             <ui:define name="title">CCP</ui:define>
             <ui:define name="main">
 
